argocd/manifests/prod/apps/libretranslate/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: libretranslate
  namespace: libretranslate
  labels:
    app: libretranslate
    app.kubernetes.io/name: libretranslate
spec:
  serviceName: libretranslate
  replicas: 1

  podManagementPolicy: OrderedReady

  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0

  selector:
    matchLabels:
      app: libretranslate
  template:
    metadata:
      labels:
        app: libretranslate
        app.kubernetes.io/name: libretranslate
    spec:
      securityContext:
        runAsUser: 1032  # user inside container
        runAsGroup: 1032 # group inside container
        fsGroup: 1032
      containers:
      - name: libretranslate
        image: libretranslate/libretranslate:v1.9.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000 # internal port for the app
        resources:
          requests:
            memory: "64Mi"  
            cpu: "10m"      
          limits:
            memory: "5Gi"  
        volumeMounts:
          - name: libretranslate-models
            mountPath: /home/libretranslate/.local/share/argos-translate
      volumes:
        - name: libretranslate-models
          persistentVolumeClaim:
            claimName: pvc-libretranslate
