argocd/manifests/prod/apps/libretranslate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libretranslate
  namespace: libretranslate
  labels:
    app.kubernetes.io/name: libretranslate
spec:
  selector:
    app: libretranslate
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 5000 # app listens here
